# QuickATAC

./: README.rst  quick  setup.cfg
quickatac/: .gitignore  __init__.py  aggregate_countmatrix.py  base.py  cli.py  count_occurences.py  countmatrix_command.py  filter_chromosomes.py  filter_fragment_barcodes.py  filter_fragsize.py  genome_tools.py  interleave_fragments.py  iterative_merge.py  nucleosome_signal.py
quickatac.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
