[metadata]
name = quickatac
version = attr: quickatac.__version__
description = Minimal and simple command-line tools for fast processing of ATAC-seq fragment files 
long_description = file: README.rst
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = False
packages = find:
python_requires = >=3.6
install_requires =
    scipy
    numpy
    tqdm

[options.entry_points]
console_scripts =
    quick = quickatac.cli:main

[options.packages.find]
exclude =
    examples*
    docs*
    quickatac.tests*